test/libsolidity/syntaxTests/parsing/constructor_internal_internal.sol
contract C {
  constructor() internal internal {}
}
// ----
// ParserError 9439: (38-46='internal'): Visibility already specified as "internal".
